unpackaged/main/default/objects/Property__c/fields/Date_of_Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Appraised_Value__c</fullName>
    <label>Date of Appraised Value</label>
    <type>Date</type>
</CustomField>