unpackaged/main/default/objects/Property__c/fields/Date_of_Property_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Property_Occupancy__c</fullName>
    <label>Date of Property Occupancy</label>
    <type>Date</type>
</CustomField>