unpackaged/main/default/objects/Property__c/fields/Interest_Rate_Hedge__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Hedge__c</fullName>
    <label>Interest Rate Hedge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>