unpackaged/main/default/objects/Property__c/fields/Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity_Date__c</fullName>
    <label>Loan Maturity Date</label>
    <type>Date</type>
</CustomField>