unpackaged/main/default/objects/Property__c/fields/Multi_Tenant_Redtail__c.field-meta.xml
<CustomField>
    <fullName>Multi_Tenant_Redtail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Tenant Redtail</label>
    <type>Checkbox</type>
</CustomField>