unpackaged/main/default/objects/Property__c/fields/Other_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Other_Asset_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Asset Class</label>
    <type>Checkbox</type>
</CustomField>