unpackaged/main/default/objects/Property__c/fields/Principal_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amortization__c</fullName>
    <label>Principal Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>