unpackaged/main/default/objects/Property__c/fields/Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Property_Details__c</fullName>
    <label>Property Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>