unpackaged/main/default/objects/Property__c/fields/Property_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Property_Occupancy__c</fullName>
    <label>Property Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>