unpackaged/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant Retail</fullName>
            </value>
            <value>
                <fullName>Singe-Tenant Retail</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant Office</fullName>
            </value>
            <value>
                <fullName>Single-Tenant Office</fullName>
            </value>
            <value>
                <fullName>Self-Storage</fullName>
            </value>
            <value>
                <fullName>Seniors Housing</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Single-Family Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>