unpackaged/main/default/objects/Property__c/fields/Purchase_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Cap_Rate__c</fullName>
    <label>Purchase Cap Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>