unpackaged/main/default/objects/Property__c/fields/Purchase_Price_Per_Sq_Ft_Unit_Key__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Per_Sq_Ft_Unit_Key__c</fullName>
    <label>Purchase Price Per Sq. Ft. / Unit / Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>