unpackaged/main/default/objects/Property__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <label>Related Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>DST_Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>