unpackaged/main/default/objects/Property__c/fields/Self_Storage__c.field-meta.xml
<CustomField>
    <fullName>Self_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Storage</label>
    <type>Checkbox</type>
</CustomField>