unpackaged/main/default/objects/Property__c/fields/Single_Family_Rental__c.field-meta.xml
<CustomField>
    <fullName>Single_Family_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single-Family Rental</label>
    <type>Checkbox</type>
</CustomField>