unpackaged/main/default/objects/Property__c/fields/Single_Tenant_Retail__c.field-meta.xml
<CustomField>
    <fullName>Single_Tenant_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single-Tenant Retail</label>
    <type>Checkbox</type>
</CustomField>