unpackaged/main/default/objects/Property__c/fields/Total_Square_Feet_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Feet_Units__c</fullName>
    <label>Total Square Feet/Units</label>
    <type>TextArea</type>
</CustomField>