unpackaged/main/default/objects/Property__c/fields/Years_of_Interest_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Interest_Only_Payments__c</fullName>
    <label>Years of Interest Only Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>