unpackaged/main/default/objects/Property__c/recordTypes/DST_Properties.recordType-meta.xml
<RecordType>
    <fullName>DST_Properties</fullName>
    <active>true</active>
    <label>DST Properties</label>
</RecordType>